# onyx

./: .clang-format  .gitignore  CPPLINT.cfg  ebpf_setup.md  readme.md
.github/workflows/: cppcheck.yml
analysis/: .gitignore  alt_data.py  bootstrap_ci.py  labels.py  losses.py  main.py  parity_plots.py  queuing_simulation.py  readme.md  run.py  s3.py  test.py  util.py
analysis-me/: diffqsize.py  gs.py  metadata.py  pacing.py  qsize.py  readme.md  run.py  single_column_data_stats.py  summary.py  test.py  windowed_just_thpt.py  windowed_thpt.py
analysis-me/data/: fancyvsimple.json  loqvfifo.json
analysis/trading_res/: trading_results_jasper.csv
aws-deploy/: aws_config.json  deploy_ttcs.sh  dup.py  ec2.json  missing.py  missing.txt  run.py  stats_to_s3.sh  template_values.json
aws-deploy/user_data/: client.json  proxy.json  recipientdpdk.json  recipientsocket.json
aws-deploy/vm_templates/: client.json  eip_eni_association.json  elastic_ip.json  elastic_network_interface.json  mc_member.json  proxy.json  recipient.json
config/: ip.txt  local-ips.json  mac.txt  mapping.json  multicast-ips.json
docs/: README.md
gcp-deploy/: run.py  template_values.json
gcp-deploy/startup-scripts/: client.sh  proxy.sh  recipient.sh
gcp-deploy/templates/: instance.yaml  network-interface-management.yaml  network-interface-service.yaml
include/CLI11/: CLI11.hpp
rv/: coding_sim.py  simulation.py
src/: Makefile  README.md  config.h  message.h  message.proto
src/kernel_modules/igb_uio/: .Module.symvers.cmd  .igb_uio.ko.cmd  .igb_uio.mod.cmd  .igb_uio.mod.o.cmd  .igb_uio.o.cmd  .modules.order.cmd  igb_uio.ko  igb_uio.mod  igb_uio.mod.c  install.sh  modules.order
src/multicast_client/: multicast_client.cpp
src/multicast_proxy/: cloudex_sequencer.hpp  delaymonitor.hpp  dpdk_proxy.hpp  gfifo_sequencer.hpp  hedging.hpp  iouring_proxy.hpp  matchingengine.hpp  multicast_proxy.cpp  noop_sequencer.hpp  socket_proxy.hpp  tc-replication.c  utils.hpp
src/multicast_receiver/: dpdk_receiver.hpp  multicast_receivers.cpp  ordergeneration.hpp  socket_receiver.hpp  utils.hpp  xdp-deduplication.c
src/utils/: ZMQSocket.cpp  ZMQSocket.hpp  common.hpp  fastmap.hpp  holdrelease.hpp  ordersqueue.hpp  trading.hpp  tree.hpp
test/: .gitignore  CMakeLists.txt
test/cmake/: gtest-build.cmake  libs.cmake
test/src/: main.cpp  main.hpp
